k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: days-of-art
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
